--- a/master.Rmd
+++ b/master.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(echo = TRUE, out.width = '100%')
 library(tidyverse)
 
 # Files
-file_yelp <-
+file_yelp <- "C:/Users/Claire/Downloads/yelp_business (1).csv"
 
 ```
 
